<resources>
    <string name="app_name">Wallet Saver</string>

    <string name="add_new_task"><font size="16">Add a new task</font></string>
    <string name="new_tag_text"><font size="16"> New Tag</font></string>
    <string name="add_tag_text">Add Tag</string>
    <string name="add_subtask_text">Add a subtask</string>
    <string name="add_assignee">Add assignee</string>
    <string name="add_note_text">Add a note</string>

    <string name="text_save">SAVE</string>
    <string name="task_required_text">Task required</string>
    <string name="icon_description_text">Icon description</string>

    <string name="theme_text">Theme</string>
    <string name="light_theme_text">Light</string>
    <string name="dark_theme_text">Dark</string>
    <string name="by_system_theme_text">Set by system</string>
    <string name="select_theme_text">Choose theme</string>


    <string name="settings_text">Settings</string>
    <string name="sort_text">Sort</string>
    <string name="switch_view_text">Switch View</string>
    <string name="print_text">Print</string>
    <string name="list_view_text">List View</string>
    <string name="kanban_view">Kanban View</string>


    <string name="fingerprint_text">Activate fingerprint</string>

    <string name="privacy_text">Política de privacidad</string>
    <string name="privacy_description_text">Imagen que representar los terminos y privacidad</string>

    <string name="support_text">Support</string>
    <string name="support_description_text">Imagen que representar soporte y ayuda</string>

    <string name="edman">Edman Cota</string>
    <string name="user_login_button_text">Login</string>

    <string name="filter_custom">Custom</string>
    <string name="filter_priority">Priority</string>
    <string name="filter_date">Date</string>
    <string name="filter_project">Project</string>
    <string name="filter_tag">Tag</string>
    <string name="sort_by_text">Sort by</string>

    <string name="urgent_text">Urgent</string>
    <string name="high_text">High</string>
    <string name="medium_text">Medium</string>
    <string name="low_text">Low</string>
    <string name="priority_text">Priority</string>

    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="next_week_text">Next Week</string>
    <string name="custom_text">Custom</string>

    <string name="delete_task_text">Delete task</string>
    <string name="complete_task_text">Complete</string>
    <string name="move_tasK_text">Move task</string>
    <string name="duplicate_task_text">Duplicate task</string>
    <string name="task_activity_text">Task activity</string>
    <string name="share_text">Share</string>
    <string name="add_member_text">Add member</string>

</resources>
