<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_text"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_tilt_shift"
        android:title="@string/sort_text"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_switch_view"
        android:icon="@drawable/ic_baseline_filter_tilt_shift"
        android:title="@string/switch_view_text"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_baseline_print"
        android:title="@string/print_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share"
        android:title="@string/share_text"
        app:showAsAction="never"/>
</menu>