<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/priorityTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:textColor="@color/primary_text_color"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/priority_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewUrgent"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/urgent_text"
            android:src="@drawable/ic_baseline_label_important_urgent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/urgent_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewHigh"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/high_text"
            android:src="@drawable/ic_baseline_label_important_high" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/high_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewDate"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/medium_text"
            android:src="@drawable/ic_baseline_label_important_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/medium_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewLow"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/low_text"
            android:src="@drawable/ic_baseline_label_important_low" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/low_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>