<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.BottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_person"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_member_text"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutShare"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_share"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_task_text"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTaskActivity"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_baseline_history"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/task_activity_text"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDuplicateTask"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_library_add"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duplicate_task_text"
            android:textColor="@color/primary_text_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMoveTask"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_fiber_smart_record"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_tasK_text"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCompleteTask"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_check_white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_task_text"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp"
            android:layout_marginStart="16sp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDelete"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/icon_description_text" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_task_text"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>